# citadel

./: .coveragerc  .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  LICENSE.tictail  README.md  conftest.py  initialize.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-gunicorn.sh  setup.cfg  vite.config.js  webpack.config.js
.github/workflows/: build.yml  js.yml  lint.yml  py.yml  test.yml
cicore/: admin.py  models.py  utils.py
cicore/management/commands/: cicore_init.py
cicore/migrations/: 0001_initial.py  0002_round_slug.py  0003_asset_better.py  0004_entry_nonce.py  0005_round_accepting.py  0006_round_visible.py  0007_round_accepting_votes.py  0008_draft.py
cicore/models/: __init__.py  assets.py  drafts.py  entries.py  events.py  rounds.py
cicore/tests/: test_cicore.py
cifront/: urls.py  views.py
cifront/app/assets/: instructions.html
cifront/app/scripts/: app.coffee  app.js  particles.js
cifront/app/styles/: index.scss
cifront/static/: timer.css  timer.js
cifront/templates/: editor.html  instructions.html  timer.html
cifront/tests/: test_cifront.py
citadel/: settings.py  urls.py  view_mixins.py  wsgi.py
citadel/static/: generic.css
citadel/templates/: 404.html  index.html
civote/: admin.py  models.py  urls.py  views.py
civote/migrations/: 0001_initial.py
civote/templates/: results.html  show.html  vote.html
civote/tests/: test_civote.py  utils.py
(+6 files in other folders)
