[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citadel"
version = "0.0.1"
description = "Code in the Dark management system"
dependencies = [
    "Pillow>=9.0",
    "PyJWT~=2.8",
    "django-cors-headers~=4.3.1",
    "django-environ==0.11.2",
    "django-ipware~=6.0",
    "django~=5.0",
    "qrcode~=7.4",
    "ranking~=0.3",
    "ulid2~=0.3",
    "whitenoise~=6.6",
]
[project.optional-dependencies]
dev = [
    "pytest~=7.4",
    "pytest-cov~=4.1",
    "pytest-django~=4.7",
]

[tool.hatch.build.targets.wheel]
# we don't really expect to use wheels for this project,
# but something needs to be here to make hatchling happy
packages = ["citadel"]

[tool.ruff]
target-version = "py311"
ignore = [
    "E501",
]
line-length = 119
extend-select = [
    "C9",
    "COM",
    "E",
    "F",
    "FLY",
    "I",
    "UP",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "citadel.settings"
norecursedirs = ["bower_components", "node_modules", ".git"]
env = ["PYTEST = true"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
